--- a/templates/flowconfig.groovy.j2
+++ b/templates/flowconfig.groovy.j2
@@ -2,8 +2,8 @@ dataSource {
     driverClassName="org.h2.Driver"
     dbCreate = "update"
     url="jdbc:h2:file:/var/lib/flow/.flow/database/flow;MVCC=TRUE"
-    username = "flow"
-    password = "{{ flow_database_password }}"
+    username = "{{ flow_database_user }}"
+    password = "{{ flow_database_pass }}"
 }
 flow {
     schemaStrategy='true'
@@ -17,5 +17,5 @@ flow {
     mailServerEmailSuffix=''
     jenkinsCliUrl='http://localhost:8080/'
     jenkinsUrl='http://localhost:8080/'
-    jenkinsFlowAdminPassword="{{ flow_password }}"
+    jenkinsFlowAdminPassword="{{ flow_admin_pass }}"
 }
